WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112016
[EFL] accessibility/textarea-selected-text-range.html is failing
https://bugs.webkit.org/show_bug.cgi?id=112016
Summary
[EFL] accessibility/textarea-selected-text-range.html is failing
Krzysztof Czech
Reported
2013-03-11 08:13:47 PDT
accessibility/textarea-selected-text-range.html is failing on all EFL platforms.
Attachments
Proposed patch
(5.78 KB, patch)
2013-10-30 01:23 PDT
,
Rob Płóciennik
no flags
Details
Formatted Diff
Diff
Proposed patch
(5.78 KB, patch)
2013-10-30 01:28 PDT
,
Rob Płóciennik
mario
: review+
Details
Formatted Diff
Diff
Updated patch
(5.82 KB, patch)
2013-10-30 08:21 PDT
,
Rob Płóciennik
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Rob Płóciennik
Comment 1
2013-10-30 01:23:08 PDT
Created
attachment 215479
[details]
Proposed patch
Rob Płóciennik
Comment 2
2013-10-30 01:28:37 PDT
Created
attachment 215481
[details]
Proposed patch
Mario Sanchez Prada
Comment 3
2013-10-30 04:47:13 PDT
Comment on
attachment 215481
[details]
Proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=215481&action=review
Lgtm, besides some small style nits.
> LayoutTests/ChangeLog:7 > +
We normally put a brief and generic description such as "Removed failure expectations" or the like
> Tools/DumpRenderTree/atk/AccessibilityUIElementAtk.cpp:1026 > + gint start, end; > + g_free(atk_text_get_selection(ATK_TEXT(m_element), 0, &start, &end));
This g_free(...) thing is a weird idiom, but I guess it's fine here since you are only interested in the offsets. Ok
> Tools/DumpRenderTree/atk/AccessibilityUIElementAtk.cpp:1029 > +
Extra blank line not needed
> Tools/WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:1169 > +
Extra line
Rob Płóciennik
Comment 4
2013-10-30 08:21:13 PDT
Created
attachment 215503
[details]
Updated patch Updated the patch accordingly.
WebKit Commit Bot
Comment 5
2013-10-30 09:04:21 PDT
Comment on
attachment 215503
[details]
Updated patch Clearing flags on attachment: 215503 Committed
r158273
: <
http://trac.webkit.org/changeset/158273
>
WebKit Commit Bot
Comment 6
2013-10-30 09:04:24 PDT
All reviewed patches have been landed. Closing bug.
Mario Sanchez Prada
Comment 7
2013-11-01 04:46:46 PDT
***
Bug 98379
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug